<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>snp_msgs</name>
  <version>0.0.0</version>
  <description>
    The SNP Msgs package contains custom messages used by the scan n plan demo system.
  </description>
  <maintainer email="david.merz@swri.org">David Merz, Jr.</maintainer>
  <license>TODO: License declaration</license>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <!-- TODO: replace with more targeted set of linters
  <test_depend>ament_lint_common</test_depend>
  -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
